update like function
