# Back-end/PhotoPro_server/app.py
@@ -14,6 +14,8 @@ from imageServices.indexImage import IndexImage
 from explorerServices.explorerInfo import ExplorerInfo
 from imageServices.imageComment import PostImageComment
 from imageServices.imageComment import GetImageComment
+from imageServices.imageLike import PostImageLike
+from imageServices.imageLike import GetImageLike
 
 app = Flask(__name__)
 
@@ -36,6 +38,8 @@ restful_api.add_resource(PostImageComment, '/image/comment')
 restful_api.add_resource(GetImageComment, '/image/comment/<string:imageId>')
 restful_api.add_resource(ImageUpload, '/image')
 restful_api.add_resource(ImageFile, '/image/file/<string:imageName>')
+restful_api.add_resource(PostImageLike, '/image/like')
+restful_api.add_resource(GetImageLike, '/image/like/<string:imageId>')
 restful_api.add_resource(ContributorInfo, '/contributor')
 restful_api.add_resource(ExplorerInfo, '/explorerInfo')
 restful_api.add_resource(ContributorImage, '/contributor/image/<string:contributorId>')
